force-app/main/default/objects/FieloPLT__Badge__c/FieloPLT__Badge__c.object-meta.xml
<CustomObject>
    <description>Badges are distinctive marks which represent a particular achievement earned by Members.</description>
    <label>Badge</label>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>