force-app/main/default/objects/FieloPLT__Badge__c/fields/FieloPLT__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Image__c</fullName>
    <description>Badge Image (Document, Attachment or URL).</description>
    <inlineHelpText>Choose a Badge image (upload an image or enter URL).</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>