force-app/main/default/objects/FieloPLT__Badge__c/fields/V_ArquivoImagem__c.field-meta.xml
<CustomField>
    <fullName>V_ArquivoImagem__c</fullName>
    <description>Campo recebe o nome do arquivo (imagem).</description>
    <label>Nome Imagem</label>
    <length>80</length>
    <type>Text</type>
</CustomField>