force-app/main/default/objects/FieloPLT__Badge__c/fields/V_Cargo__c.field-meta.xml
<CustomField>
    <fullName>V_Cargo__c</fullName>
    <label>Cargo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COORDENADOR | GERENTE REGIONAL VIP</fullName>
            </value>
            <value>
                <fullName>DIRETOR</fullName>
            </value>
            <value>
                <fullName>GERENTE DE CONTAS</fullName>
            </value>
            <value>
                <fullName>LÍDER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>