force-app/main/default/objects/FieloPLT__Badge__c/fields/V_Classificacao__c.field-meta.xml
<CustomField>
    <fullName>V_Classificacao__c</fullName>
    <description>Classificação da badge.</description>
    <label>Classificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Engajamento</fullName>
            </value>
            <value>
                <fullName>Youbet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>