force-app/main/default/objects/FieloPLT__Badge__c/fields/V_CodigoBadge__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoBadge__c</fullName>
    <description>Campo criado para vínculo de imagens</description>
    <displayFormat>B-{0000}</displayFormat>
    <label>Código Badge</label>
    <type>AutoNumber</type>
</CustomField>