force-app/main/default/objects/FieloPLT__Badge__c/fields/V_Image__c.field-meta.xml
<CustomField>
    <fullName>V_Image__c</fullName>
    <formula>&apos;/comunidade&apos; + FieloPLT__Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>