force-app/main/default/objects/FieloPLT__Badge__c/fields/V_Ordem__c.field-meta.xml
<CustomField>
    <fullName>V_Ordem__c</fullName>
    <description>Campo utilizado para ordenar a badge no portal.</description>
    <inlineHelpText>Campo utilizado para ordenar a badge no portal.</inlineHelpText>
    <label>Ordem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>