force-app/main/default/objects/FieloPLT__Badge__c/fields/V_PapelSalesPersonYear__c.field-meta.xml
<CustomField>
    <fullName>V_PapelSalesPersonYear__c</fullName>
    <label>Papel Sales Person Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GERENTES DE CONTAS</fullName>
            </value>
            <value>
                <fullName>LÍDERES (COORDENADORES) E GERENTE REGIONAIS</fullName>
            </value>
            <value>
                <fullName>DIRETORES</fullName>
            </value>
            <value>
                <fullName>NÃO ELEGÍVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>