force-app/main/default/objects/FieloPLT__Badge__c/fields/V_Pontos__c.field-meta.xml
<CustomField>
    <fullName>V_Pontos__c</fullName>
    <description>Pontos equivalentes da badge.</description>
    <inlineHelpText>Pontos equivalentes da badge.</inlineHelpText>
    <label>Pontos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>