force-app/main/default/objects/FieloPLT__Badge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>V_Classificacao__c</columns>
    <columns>V_Ordem__c</columns>
    <columns>V_Pontos__c</columns>
    <columns>FieloPLT__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>V_PapelSalesPersonYear__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>