force-app/main/default/objects/FieloPLT__Badge__c/listViews/FieloPLT__Badges_by_Program.listView-meta.xml
<ListView>
    <fullName>FieloPLT__Badges_by_Program</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__Program__c</columns>
    <columns>V_Classificacao__c</columns>
    <columns>V_Pontos__c</columns>
    <columns>FieloPLT__Status__c</columns>
    <columns>FieloPLT__Image__c</columns>
    <columns>V_ArquivoImagem__c</columns>
    <filterScope>Everything</filterScope>
    <label>Badges by Program</label>
    <language>en_US</language>
</ListView>