force-app/main/default/objects/FieloPLT__Badge__c/listViews/V_BadgesYoubet.listView-meta.xml
<ListView>
    <fullName>V_BadgesYoubet</fullName>
    <columns>NAME</columns>
    <columns>V_ArquivoImagem__c</columns>
    <columns>V_Classificacao__c</columns>
    <columns>V_Ordem__c</columns>
    <columns>V_Pontos__c</columns>
    <columns>FieloPLT__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>V_Classificacao__c</field>
        <operation>equals</operation>
        <value>Youbet</value>
    </filters>
    <label>Badges - Youbet</label>
    <language>pt_BR</language>
</ListView>